feat: configure status badge
adds status badge to readme

--- a/.github/workflows/terraform-lint-validate.yml
+++ b/.github/workflows/terraform-lint-validate.yml
@@ -7,5 +7,5 @@ permissions:
   contents: read
   pull-requests: read
 jobs:
-  commitmsg-conform:
+  terraform-lint-validate:
     uses: tfstack/actions/.github/workflows/terraform-lint-validate.yml@main
